gerador de senhas

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
         <div>
             <input type="checkbox" name="" id="chkLowerId">
-            <label for="chkLowerId">Letras mínusculas</label>
+            <label for="chkLowerId">Letras minúsculas</label>
         </div>
         <div>
             <input type="checkbox" name="" id="chkUpperId">
-            <label for="chkUpperId">Letras maíusculas</label>
+            <label for="chkUpperId">Letras MAIÚSCULAS</label>
         </div>
         <div>
             <input type="checkbox" name="" id="chkNumberId">
